photoview/photoview-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: photoview
  labels:
    app.kubernetes.io/name: photoview
    app.kubernetes.io/component: photo-manager
    app.kubernetes.io/managed-by: kubectl
