photoview/photoview-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photoview
  namespace: photoview
  labels:
    app.kubernetes.io/name: photoview
    app.kubernetes.io/component: photo-manager
    app.kubernetes.io/managed-by: kubectl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: photoview
      app.kubernetes.io/component: photo-manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: photoview
        app.kubernetes.io/component: photo-manager
        app.kubernetes.io/managed-by: kubectl
    spec:
      containers:
        - name: photoview
          image: photoview/photoview:2.4.0
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 1000m
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - mountPath: /photos
              name: data
            - mountPath: /home/photoview/media-cache
              name: cache
      volumes:
        - name: data
          nfs:
            path: /export/Discord-Saver/Content
            server: 192.168.86.107
            readOnly: true
        - name: cache
          nfs:
            path: /export/Discord-Saver/Cache
            server: 192.168.86.107
