photoview/photoview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoview
  namespace: photoview
  labels:
    app.kubernetes.io/name: photoview
    app.kubernetes.io/component: photo-manager
    app.kubernetes.io/managed-by: kubectl
spec:
  selector:
    app.kubernetes.io/name: photoview
    app.kubernetes.io/component: photo-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
