photoview/photoview-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: photoview
  namespace: photoview
  labels:
    app.kubernetes.io/name: photoview
    app.kubernetes.io/component: ingress
    app.kubernetes.io/managed-by: kubectl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`photoview-discord.albinmedoc.se`)
      kind: Rule
      services:
        - name: photoview
          port: 80
